major sonar issues fixed