@@ -59,7 +59,7 @@ public class SBUClientTypeReportServiceImpl implements SBUClientTypeReportServic
 		LocalDate fyEndDate = LocalDate.of(financialYearEndingOn.getYear(), 3, 31);
 
 		BusinessTypeResponse businessTypeResponse = new BusinessTypeResponse();
-		List<BusinessTypeOutDTO> outDTOList = new ArrayList<>();
+		List<BusinessTypeOutDTO> outDTOList = null;
 		List<RevenueResourceEntry> revenueResourceEntryList = revenueResourceEntryCustomRepository
 				.findRevenueResourceDetailsForSBUClient(sbuClientTypeReportRequest);
 
@@ -293,7 +293,7 @@ public class SBUClientTypeReportServiceImpl implements SBUClientTypeReportServic
 		DateTimeFormatter formatter = DateTimeFormatter.ofPattern("MMMM-yyyy", Locale.ENGLISH);
 		return Stream.iterate(startDate.withDayOfMonth(1), date -> date.plusMonths(1))
 				.limit(ChronoUnit.MONTHS.between(startDate, endDate.plusMonths(1))).map(date -> date.format(formatter))
-				.collect(Collectors.toList());
+				.toList();
 	}
 
 	private FinancialYearRevenue calculatingBasedOnBusinessType(List<RevenueResourceEntry> revenueResourceEntries,
